Revision history for File-Slurp-Sane

{{$NEXT}}
          Accept UTF-8 as encoding case-insensitively
          Fix performance issue on 5.20.0

0.001     2014-05-24 18:16:48CEST+0200 Europe/Amsterdam
          Initial release to an unsuspecting world