@@ -4,4 +4,4 @@
 *.swo
 *.tdy
 *.tar.gz
-File-Slurp-Sane-*
+File-Slurper-*
