@@ -1,4 +1,4 @@
-name    = File-Slurp-Sane
+name    = File-Slurper
 author  = Leon Timmermans <leont@cpan.org>
 license = Perl_5
 copyright_holder = Leon Timmermans
